Improve Entrypoint API * entrypoint-metadata now stores a map of Class -> MethodHandle * deprecate old, incompatible methods   * those now return an empty list and are marked for removal